--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-md-10 col-sm-10 col-md-offset-1 col-sm-offset-1">
                     <p class="date">
                         <i class="fa fa-calendar" aria-hidden="true"></i> March 08, 2k19 ,&nbsp;
-                        <i class="fa fa-map-marker" aria-hidden="true"></i> KIT - KalignarKarunanidhi Institute of Technology
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> KIT - KalaignarKarunanidhi Institute of Technology
                     </p>
                 </div>
                 
